<resources>
    <string name="app_name" translatable="false">Stolpersteine</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="detailed">Details</string>
    <string name="cities">Cities</string>
    <string name="streets">Streets</string>
    <string name="people">People</string>
    <string name="btn_en_desc">This is the flag of Great Britain. This can be used to change the language to English.</string>
    <string name="btn_nl_desc">This is the flag of The Netherlands. This can be used to change the language to Dutch.</string>
    <string name="btn_fr_desc">This is the flag of France. This can be used to change the language to French.</string>
    <string name="popup_title_lang">Current language</string>
    <string name="popup_text_lang">This language is already selected</string>
    <string name="hello_blank_fragment">This is an empty fragment</string>
</resources>