<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.language.LanguageSettingsFragment">

    <TextView
        android:id="@+id/language_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/language"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_en"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="56dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/btn_en_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/flag_en"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_nl"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/btn_nl_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/flag_nl"
        app:layout_constraintEnd_toStartOf="@+id/btn_fr"
        app:layout_constraintStart_toEndOf="@+id/btn_en"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_fr"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="72dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/btn_fr_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/flag_fr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>